--- a/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/VendorContact/Search.cshtml
@@ -1,6 +1,11 @@
-﻿@{
+﻿@model MyLeoRetailer.Models.VendorContactViewModel
+
+@{
     ViewBag.Title = "Search";
 }
+<script src="~/Scripts/Modules/VendorContact/search_vendorcontact_events.js"></script>
+<script src="~/Scripts/Modules/VendorContact/search_vendorcontact_methode.js"></script>
+<script src="~/Scripts/Modules/common_methods.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
@@ -30,14 +35,16 @@
 
             <div class="block">
 
-                <form role="form">
+                <form role="form" id="frmVendorContact">
 
                     <div class="row">
 
                         <div class="col-md-5">
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter Vendor name to search." />
+                                <input type="text" class="form-control" placeholder="Enter Vendor Contact name to search." name="Filter.Vendor_Contact_Name" />
+                                <input type="hidden" id="hdnVendorContact_Id" name="VendorContact.VendorContact_Id" value="@Model.VendorContact.VendorContact_Id">
+
                             </div>
 
                         </div>
@@ -46,7 +53,7 @@
 
                             <div class="btn-group">
                                 <button class="btn btn-success active" href="@Url.Action("Index", "VendorContact")">Create</button>
-                                <button class="btn btn-danger active">Edit</button>
+                                <button class="btn btn-danger active" id="btnVendorContact">Edit</button>
                             </div>
 
                         </div>
@@ -59,134 +66,11 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;">
-
-            <table class="table table-bordered table-hover">
-
-                <thead>
-
-                    <tr>
-                        <th>#</th>
-                        <th>Vendor Name</th>
-                        <th>First Name</th>
-                        <th>Last name</th>
-                        <th>Address</th>
-                        <th>City</th>
-                        <th>State</th>
-                        <th>Country</th>
-                        <th>Pincode</th>
-                        <th>Mobile1</th>
-                        <th>Mobile2</th>
-                        <th>Email</th>
-                    </tr>
-
-                </thead>
-
-                <tbody>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" checked="" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                </tbody>
-
-            </table>
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
         </div>
-
-        <div class="col-md-12" style="padding: 0px;text-align:center;">
-
-            <ul class="pagination pagination-sm">
-                <li class="disabled"><a href="#">First</a></li>
-                <li class="disabled"><a href="#">«</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">»</a></li>
-                <li><a href="#">Last</a></li>
-            </ul>
+       
+        <div class="col-md-12" style="padding: 0px;" id="divPager">
 
         </div>
 
