--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -31,14 +31,14 @@
 
             <div class="block">
 
-                <form role="form">
+                <form role="form" id="frmSearchProduct">
 
                     <div class="row">
 
                         <div class="col-md-10">
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Enter product sku code." />
+                                <input type="text" class="form-control" placeholder="Enter product sku code." name="Product.SKU_Code"/>
                             </div>
 
                         </div>
@@ -46,7 +46,8 @@
                         <div class="col-md-2" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button class="btn btn-success active">Create</button>
+                                @*<button class="btn btn-success active">Create</button>*@
+                                <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
                                 <button class="btn btn-danger active">Edit</button>
                             </div>
 
@@ -60,133 +61,12 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;">
-
-            <table class="table table-bordered table-hover">
-
-                <thead>
-
-                    <tr>
-                        <th>#</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Username</th>
-                    </tr>
-                
-                </thead>
-                
-                <tbody>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" checked="" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input name="switch-radio1" type="radio">
-                                <span></span>
-                            </label>
-                        </td>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>fat</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>mdo</td>
-                    </tr>
-                </tbody>
-           
-            </table>
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;text-align:center;">
-
-            <ul class="pagination pagination-sm">
-                <li class="disabled"><a href="#">First</a></li>
-                <li class="disabled"><a href="#">«</a></li>
-                <li class="active"><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li><a href="#">»</a></li>
-                <li><a href="#">Last</a></li>
-            </ul>
-
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divProductPager">
+             
         </div>
 
     </div>
