--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Index.cshtml
@@ -196,47 +196,62 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @if (Model.Employee.Is_Online == true)
-                        {
-                            <input type="text" class="form-control online-field" id="txtUser_Name" placeholder="Enter user name." name="Employee.User_Name" value="@Model.Employee.User_Name" />
-                        }
-                        else
-                        {
-                            <input type="text" class="form-control online-field" id="txtUser_Name" placeholder="Enter user name." name="Employee.User_Name" value="@Model.Employee.User_Name" style="display:none" />
-                        }
-                        <input type="hidden" id="hdnUser_Name" value="@Model.Employee.User_Name" />
-                    </div>
+                    @if (Model.Employee.Is_Online == true)
+                    {
+                        <div class="form-group online-field">
+                            <input type="text" class="form-control" id="txtUser_Name" placeholder="Enter user name." name="Employee.User_Name" value="@Model.Employee.User_Name" />
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group online-field" style="display:none">
+                            <input type="text" class="form-control " id="txtUser_Name" placeholder="Enter user name." name="Employee.User_Name" value="@Model.Employee.User_Name" />
+                        </div>
+                    }
+                    <input type="hidden" id="hdnUser_Name" value="@Model.Employee.User_Name" />
 
-                    <div class="form-group">
-                        @if (Model.Employee.Is_Online == true)
-                        {
-                            <input type="password" class="form-control online-field" id="txtPassword" placeholder="Enter password." name="Employee.Password" value="@Model.Employee.Password" />
-                        }
-                        else
-                        {
-                            <input type="password" class="form-control online-field" id="txtPassword" placeholder="Enter password." name="Employee.Password" value="@Model.Employee.Password" style="display:none" />
-                        }
-                    </div>
+                    @if (Model.Employee.Is_Online == true)
+                    {
+                        <div class="form-group online-field">
+                            <input type="password" class="form-control " id="txtPassword" placeholder="Enter password." name="Employee.Password" value="@Model.Employee.Password" />
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group online-field" style="display:none">
+                            <input type="password" class="form-control " id="txtPassword" placeholder="Enter password." name="Employee.Password" value="@Model.Employee.Password" />
+                        </div>
+                    }
 
-                    <div class="form-group">
-                        @if (Model.Employee.Is_Online == true)
-                        {
-                            <input type="password" class="form-control online-field" id="txtConfirmPassword" placeholder="Confirm password." name="Confirm_Password" value="@Model.Employee.Password" />
-                        }
-                        else
-                        {
-                            <input type="password" class="form-control online-field" id="txtConfirmPassword" placeholder="Confirm password." name="Confirm_Password" value="@Model.Employee.Password" style="display:none" />
-                        }
-                    </div>
+                    @if (Model.Employee.Is_Online == true)
+                    {
+                        <div class="form-group online-field">
+                            <input type="password" class="form-control " id="txtConfirmPassword" placeholder="Confirm password." name="Confirm_Password" value="@Model.Employee.Password" />
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group online-field" style="display:none">
+                            <input type="password" class="form-control " id="txtConfirmPassword" placeholder="Confirm password." name="Confirm_Password" value="@Model.Employee.Password" />
+                        </div>
+                    }
 
                     @if (Model.Employee.Is_Online == true)
                     {
                         <div class="form-group online-field">
                             <select class="form-control select" name="Employee.Role_Id" id="drpRole">
                                 <option value="">Select Role</option>
-                                <option value="1">Admin</option>
-                                <option value="2">User</option>
+                                @foreach (var item in Model.Role_List)
+                                {
+                                    if (item.Role_Id == Model.Employee.Role_Id)
+                                    {
+                                        <option selected value="@item.Role_Id">@item.Role_Name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.Role_Id">@item.Role_Name</option>
+                                    }
+                                }
                             </select>
                         </div>
                     }
@@ -245,8 +260,17 @@
                         <div class="form-group online-field" style="display:none;">
                             <select class="form-control select" name="Employee.Role_Id" id="drpRole">
                                 <option value="">Select Role</option>
-                                <option value="1">Admin</option>
-                                <option value="2">User</option>
+                                @foreach (var item in Model.Role_List)
+                                {
+                                    if (item.Role_Id == Model.Employee.Role_Id)
+                                    {
+                                        <option selected value="@item.Role_Id">@item.Role_Name</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="@item.Role_Id">@item.Role_Name</option>
+                                    }
+                                }
                             </select>
                         </div>
                     }
