--- a/MyLeoRetailer/Views/Shared/_Layout.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
                     </div>
                     <div class="mb-footer">
                         <div class="pull-right">
-                            <a href="@Url.Action("Index", "Login")" class="btn btn-success btn-lg">Yes</a>
+                            <a href="@Url.Action("Logout", "Login")" class="btn btn-success btn-lg">Yes</a>
                             <button class="btn btn-default btn-lg mb-control-close">No</button>
                         </div>
                     </div>
