--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Employee_Branch_Mapping.cshtml
@@ -1,20 +1,17 @@
-﻿@model MyLeoRetailer.Models.BranchViewModel
-@using MyLeoRetailerInfo.Common;
+﻿@model MyLeoRetailer.Models.EmployeeViewModel
+
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employee Branch Mapping";
 }
 
-<script src="~/Scripts/Modules/common_methods.js"></script>
-<script src="~/Scripts/Modules/Branch/Branch_events.js"></script>
-<script src="~/Scripts/Modules/Branch/Branch_methods.js"></script>
-<script src="~/Scripts/Modules/Branch/Branch_validation.js"></script>
+<script src="~/Scripts/Modules/Employee/Employee_Branch_Mapping_Event.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
     <li><a href="#">Home</a></li>
     <li><a href="#">Masters</a></li>
-    <li class="active">Branch Management</li>
+    <li class="active">Employee Branch Mapping</li>
 </ul>
 <!-- END BREADCRUMB -->
 <!-- START CONTENT FRAME -->
@@ -22,29 +19,31 @@
 
     <!-- START CONTENT FRAME TOP -->
     <div class="content-frame-top">
+
         <div class="page-title">
-            <h2><span class="fa fa-image"></span>&nbsp;&nbsp; Branch Management</h2>
+            <h2><span class="fa fa-users"></span>&nbsp;&nbsp;Employee Branch Mapping &nbsp;&nbsp;</h2>
+            <i class="fa fa-angle-double-right fa-3x" aria-hidden="true"></i>
+        </div>
+
+        <div class="page-title">
+            <h4 style="margin-left: 20px;margin-top: 11px;">
+                <span class="fa fa-user"></span>&nbsp;&nbsp;@Model.Employee.Employee_Name
+            </h4>
+
         </div>
     </div>
+
 
 </div>
 <!-- END CONTENT FRAME -->
 
 <div class="page-content-wrap">
 
-    <form id="frmBranch">
+    <form id="frmEmployeeBranchMapping">
+        <input type="hidden" class="form-control" id="hdn_EmployeeId" name="Employee.Employee_Id" value="@Model.Employee.Employee_Id" />
 
         <div class="row">
             <div class="col-md-3">
-                <div class="form-group">
-                    <select class="form-control select">
-                        <option>Branch</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                    </select>
-                </div>
 
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered">
@@ -55,66 +54,54 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>A</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>B</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>C</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>D</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
+
+                            @for (int i = 0; i < Model.List_Branch.Count; i++)
+                            {
+                                var map_Branch = Model.Map_Branches.Where(a => a.Branch_ID == Model.List_Branch[i].Branch_ID).SingleOrDefault();
+                                <tr>
+                                    <td>@Model.List_Branch[i].Branch_Name</td>
+                                    <td>
+                                        <input type="hidden" class="form-control" id="hdn_BranchId" name="List_Branch[@i].Branch_ID" value="@Model.List_Branch[i].Branch_ID" />
+
+                                        @if (map_Branch != null && map_Branch.Branch_ID == Model.List_Branch[i].Branch_ID)
+                                        {
+                                            if (map_Branch.IsActive == 1)
+                                            {
+                                                <label class="switch">
+                                                    <input checked name="List_Branch[@i].IsActive" value="1" type="checkbox" id="Flag">
+                                                    <span></span>
+                                                </label>
+                                            }
+                                            else
+                                            {
+                                                <label class="switch">
+                                                    <input name="List_Branch[@i].IsActive" value="0" type="checkbox" id="Flag">
+                                                    <span></span>
+                                                </label>
+                                            }
+
+                                        }
+                                        else
+                                        {
+                                            <label class="switch">
+                                                <input name="List_Branch[@i].IsActive" value="0" type="checkbox" id="Flag">
+                                                <span></span>
+                                            </label>
+                                        }
+                                    </td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
                 </div>
 
-                <button type="button" class="btn btn-success">Save</button>
+                <button type="button" id="btnSave" class="btn btn-success">Save</button>
+                <button type="button" class="btn btn-danger active" onclick="location.href='@Url.Action("Search", "Employee")'">Cancel</button>
             </div>
         </div>
 
         <br />
 
-        <div class="row">
-            <div class="col-md-3">
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Branch</th>
-                                <th>Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>A</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>B</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>C</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                            <tr>
-                                <td>D</td>
-                                <td><label class="check"><input type="checkbox" class="icheckbox" /> </label></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <button type="button" class="btn btn-success">Save</button>
-            </div>
-        </div>
 
     </form>
 </div>
