--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -39,7 +39,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-10" style="padding: 0px;">
+                        <div class="col-md-8" style="padding: 0px;">
 
                             <div class="form-group">
                                 <input type="text" class="form-control" name="Filter.Employee" placeholder="Enter employee name to search." />
@@ -48,13 +48,13 @@
 
                         </div>
 
-                        <div class="col-md-2" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
+                        <div class="col-md-4" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
                                 @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
                                 @*<a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
                                 <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>*@
-
+                                <button role="button" class="btn btn-info active" value="Create" id="btnMapBranchEmployee" style="display:none">Map Branch to Employee </button>
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
                                 <button class="btn btn-danger active" value="Edit" id="btnEditEmployee">Edit</button>
                             </div>
