--- a/MyLeoRetailer/Views/Shared/_Menu.cshtml
+++ b/MyLeoRetailer/Views/Shared/_Menu.cshtml
@@ -120,6 +120,13 @@
                             <li><a href="form-file-handling.html"><span class="fa fa-floppy-o"></span> File Handling</a></li>
                         </ul>
                     </li>
+
+                    @*Addition by swapnali | Date:14/09/2016*@
+                     <li class="xn-openable">
+                         <a href="/Employee/ChangeBranch"><span class="fa fa-pencil"></span> <span class="xn-text">Change Branch</span></a>
+                    </li>
+                    @*End*@
+
                     <!-- SIGN OUT -->
                     <li class="xn-icon-button pull-right">
                         <a href="#" class="mb-control" data-box="#mb-signout"><span class="fa fa-sign-out"></span></a>                        
