--- a/MyLeoRetailer/Views/PostLogin/Master/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/PurchaseReturn/Index.cshtml
@@ -218,7 +218,7 @@
 
                     <div class="row">
                         <div class="table-responsive" style="width:100%;">
-                            <table class="table table-bordered" id="tblPurchaseReturnItems">
+                            <table class="table table-bordered" id="tblPurchaseReturn">
                                 <thead>
                                     <tr></tr>
                                 </thead>
