--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -101,6 +101,7 @@
                                 </thead>
                                 <tbody>
                                     <span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblError"></span>
+                                    <span generated="true" style="color: #b64645;" class="help-block pull-right" id="lblSKUMappingError"></span>
                                     <tr id="PurchaseReturnRequestItemRow_0">
                                         <td>
                                             <input class="form-control input-sm" type="text" name="PurchaseReturnRequest.PurchaseReturnRequestItems[0].Barcode" id="textBarcode_No_0">
